bk_ida/gccida/c1/round_trampoline_addr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/round_trampoline_addr/src/function.c:6249:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/round_trampoline_addr/src/function.c:6253:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/round_trampoline_addr/src/function.c:6261:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/round_trampoline_addr/src/obj/function.o] Error 1
